@@ -85,6 +85,10 @@ icon:plus[] Docker: The Gentics Mesh server docker container has been updated:
   * The pre-extracted embedded Elasticsearch folder has been removed from the server image to reduce the docker image size. The embedded ES will automatically be extracted to the `/mesh/elasticsearch` folder when embedded mode is enabled.
   * The JRE version in the docker image has been updated from version `11.0.3_7` to `11.0.5_10`.
 
+[[pending]]
+
+icon:check[] Core: Improved REST API startup performance. Fixes link:https://github.com/gentics/mesh/issues/996[#996]
+
 [[v1.3.2]]
 == 1.3.2 (12.12.2019)
 
